[package]
name = "reference-trie-fun"
version = "100.29.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Simple reference trie format"
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { path = "../../hash-db" , version = "0.16.0"}
keccak-hasher = { path = "../keccak-hasher", version = "0.16.0" }
trie-db-fun = { path = "../../trie-db", default-features = false, version = "100.28.0" }
trie-root = { path = "../../trie-root", default-features = false, version = "0.18.0" }
parity-scale-codec = { version = "3.0.0", features = ["derive"] }
hashbrown = { version = "0.14.1", default-features = false, features = ["ahash"] }
paste = "1.0.12"

[dev-dependencies]
trie-bench = { path = "../trie-bench" }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# no actual support for std, only to avoid a cargo issues
std = [
  "trie-db-fun/std",
  "trie-root/std",
]
