[package]
name = "trie-eip1186-test"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests for trie-eip1186 crate"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
trie-eip1186 = { path = "..", version = "0.5.0"}
trie-db-fun = { path = "../../trie-db", version = "100.28.0"}
hash-db = { path = "../../hash-db", version = "0.16.0"}
reference-trie-fun = { path = "../../test-support/reference-trie", version = "100.29.0" }
memory-db = { path = "../../memory-db", version = "0.32.0" }
